# like

./: .gitignore  README.md
FreeRTOS/FreeRTOS/Demo/CORTEX_MPS2_QEMU_IAR_GCC/: .clangd  main.c
ai_code_training/: .env  Cargo.toml
ai_code_training/.leetcode_cache/: 215.json
ai_code_training/src/: code_gen.rs  lib.rs  main.rs  problem.rs
deepseek_client/: Cargo.toml  README.md  README_ZH.md
deepseek_client/src/: deepseek_api.rs  lib.rs  main.rs
like-cpputest/: CMakeLists.txt  main.cpp
like-create_process/: CMakeLists.txt  main.c
like-process_and_thread/: README.md
like-strace/: Cargo.toml
like-strace/src/: main.rs
nocode-fn_test_example/: main.c
nocode-fn_test_example/coverage_report/: index.html
nocode-fn_test_example/coverage_report/nocode-fn_test_example/: index.html  main.c.func-c.html  main.c.func.html  main.c.gcov.html
nocode-rtos_ISR/: README.md
qemu_freertos/: README.md
qemu_freertos/FreeRTOS/FreeRTOS/Demo/CORTEX_MPS2_QEMU_IAR_GCC/: main.c
