[package]
name = "ai_code_training"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
html2text = "0.2"
env_logger = "0.10"  # 日志实现
log = "0.4"          # 日志接口
async-openai = "0.28"  # DeepSeek 兼容 OpenAI API
dotenv = "0.15"        # 用于环境变量管理
futures = "0.3"        # 流处理